[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_asenetcky"
version = "0.0.1"
authors = [
  { name="Alexander Senetcky", email="asenetcky@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/asenetcky/py-package-tutorial"
Issues = "https://github.com/asenetcky/py-package-tutorial/issues"